--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -23,3 +23,13 @@ footer {
     justify-content: space-between;
     /* Optional: Add other styles like padding, margin, etc. as needed */
 }
+
+body {
+    background-color: #f9f9f9;
+    font-family: 'Roboto', sans-serif;
+}
+
+.col-md-3 img {
+    width: 100%;
+    height: 150px;
+}
